--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "bruhapi": "^1.0.2",
     "cheerio": "^1.0.0-rc.10",
+    "cross-fetch": "^3.1.4",
+    "dadjokes-wrapper": "^0.1.4",
     "dotenv": "^14.1.0",
     "moment": "^2.29.1",
+    "node-fetch": "^3.1.1",
     "node-telegram-bot-api": "^0.56.0",
     "playwright": "^1.17.2",
     "puppeteer": "^13.0.1",
+    "random-jokes-api": "^1.5.9",
     "read-last-lines": "^1.8.0"
   }
 }
