--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^14.1.0",
     "moment": "^2.29.1",
     "node-fetch": "^3.1.1",
+    "node-libcurl": "^2.3.3",
     "node-telegram-bot-api": "^0.56.0",
     "playwright": "^1.17.2",
     "puppeteer": "^13.0.1",
